assignment 02 all done

--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -248,6 +248,7 @@ pre code {
 <li><p>3.2.2. What is the mean of <em>vocabulary_random</em>? Is it equal to the mean of <em>vocabulary</em>?</p></li>
 <li><p>3.2.3. We consider the population mean is equal to the mean of <em>vocabulary_random</em>. To test whether your null hypothesis in 3.2.1 is true, run a one-sample t-test and write 2-3 sentences to interpret your result.</p></li>
 </ul>
+<p><span class="math display">\[ \chi^2 = \frac{(330-340)^2}{340} + \frac{(440-430)^2}{430} + \frac{(86-76)^2}{76} + \frac{(86-96)^2}{96} = 2.884132\]</span></p>
 </div>
 </div>
 
